<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="@dimen/bootstrap_h3_text_size"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_ex_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_type_add"
            android:layout_marginTop="60dp"

            app:bootstrapSize="lg"
            app:roundedCorners="true"
            app:showOutline="false"
            app:bootstrapBrand="info"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_ex_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_type_sub"
            android:layout_marginTop="20dp"

            app:bootstrapSize="lg"
            app:roundedCorners="true"
            app:showOutline="false"
            app:bootstrapBrand="warning"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_ex_mix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_type_mix"
            android:layout_marginTop="20dp"
            app:bootstrapSize="lg"
            app:roundedCorners="true"
            app:showOutline="false"
            app:bootstrapBrand="danger"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_about"
            android:layout_marginTop="50dp"
            app:bootstrapSize="lg"
            app:roundedCorners="true"
            app:showOutline="true"
            app:bootstrapBrand="secondary"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>